Client compatible with Java 7