@@ -4,6 +4,7 @@ import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.nio.charset.Charset;
 import java.util.Base64;
+import javax.xml.bind.DatatypeConverter;
 
 /**
  *
@@ -21,7 +22,8 @@ public class Credentials {
             outputStream.write(password[i]);
         }
         byte c[] = outputStream.toByteArray();
-        this.encodedAuthString = Base64.getEncoder().encodeToString(c);
+        //this.encodedAuthString = Base64.getEncoder().encodeToString(c); // java 8 only
+        this.encodedAuthString = DatatypeConverter.printBase64Binary(c);
     }
 
     public Credentials(String encodedAuthString) {
